<resources>
    <string name="app_name">Calculator Plus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Admob-->
    <string name="admob_app_id">ca-app-pub-9576945242972545~4190039402</string>
    <string name="admob_interstitial_ad_unit">ca-app-pub-9576945242972545/8021574839</string>
    <string name="admob_banner_ad_unit">ca-app-pub-9576945242972545/4269930455</string>
    <string name="admob_appopen_ad_unit">ca-app-pub-9576945242972545/6704522100</string>
    <string name="rewarded_interstitial">ca-app-pub-9576945242972545/3579766942</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="basic_calculator">Basic Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="discount_calculator">Discount Calculator</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>


    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>