<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".BMRCalculatorFragment"
    >


    <TextView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:text="BMR Calculator"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:orientation="horizontal"
        android:layout_below="@id/bar">
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/cardbackground"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/maleLayout">

            <ImageView
                android:layout_width="170px"
                android:layout_height="170px"
                android:layout_above="@id/textmale"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/male"
                >

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/male"
                android:id="@+id/textmale"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp">

            </TextView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/cardbackground"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/femaleLayout">

            <ImageView
                android:layout_width="170px"
                android:layout_height="170px"
                android:layout_centerInParent="true"
                android:layout_above="@id/textfemale"
                android:layout_marginBottom="20dp"
                android:src="@drawable/female"
                android:contentDescription="@string/todo">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/femaletext"
                android:id="@+id/textfemale"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp">

            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/httxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/gender"
        android:gravity="center"
        android:text="Height"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/heightxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/httxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/background_edittext"
        android:drawablePadding="10dp"
        android:maxLength="3"
        android:ems="10"
        android:hint="cm"
        android:inputType="numberDecimal"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/httxt1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/heightxt"
        android:gravity="center"
        android:text="Weight(Kg)"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/weighttxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/httxt1"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_edittext"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Kg"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:padding="12dp"
        />


    <TextView
        android:id="@+id/httxt2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/weighttxt"
        android:gravity="center"
        android:text="Age(Years)"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/agettxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/httxt2"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_edittext"
        android:drawablePadding="10dp"
        android:maxLength="2"
        android:ems="10"
        android:hint="Years"
        android:inputType="number"
        android:padding="12dp"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agettxt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/background_edittext"
        android:text="Calculate YOUR BMR"
        />
    <FrameLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>